# rata

./: Cargo.toml  Embed.toml  Makefile  rust-toolchain.toml
.cargo/: config.toml
src/: button.rs  lib.rs  main.rs  vfd_driver.rs
