[package]
name = "rata"
version = "0.1.0"
authors = ["Yuri Volkov <volkov.yuri.alex@gmail.com>"]
edition = "2021"

[dependencies]
rtt-target = "0.4.0"
panic-rtt-target = {version = "0.1.2", features = ["cortex-m"]}
rtic-monotonics = {version = "1.0.0", features = ["cortex-m-systick"]}
rtic = {version = "2.0.0-alpha.1", features = ["thumbv7-backend"]}
# rtic-sync = "1.0.1"
usb-device = "0.2.9"
usbd-serial = "0.1.1"

[dependencies.stm32f1xx-hal]
version = "0.10.0"
features = ["stm32f103", "rt"]

[dependencies.cortex-m]
version = "0.7.7"
features = ["critical-section-single-core"]

# Set the default for dependencies.
[profile.dev.package."*"]
opt-level = "s"

[profile.release]
codegen-units = 1
incremental = false
debug = true
lto = true
opt-level = "s"
